# HelpHS

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml  package-lock.json  schema.prisma
backend/: .dockerignore  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.staging.yml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 75ec9d264ccb_initial_schema.py  a1b2c3d4e5f6_add_ai_conversation_summary.py  b2c3d4e5f6a7_add_anonymize_audit_action.py  c3d4e5f6a7b8_add_technician_notes_to_tickets.py  d4e5f6a7b8c9_add_tags.py  e5f6a7b8c9d0_add_client_observation_to_tickets.py  f6a7b8c9d0e1_add_kb_comments.py  g7b8c9d0e1f2_add_onboarding_fields.py  h8c9d0e1f2g3_add_company_address_fields.py  i9d0e1f2g3h4_add_resolution_note_to_tickets.py  j0e1f2g3h4i5_add_groups.py  k1f2g3h4i5j6_add_ticket_notes.py  l2g3h4i5j6k7_add_group_notes.py  m3h4i5j6k7l8_add_company_notes.py  n4i5j6k7l8m9_add_calendar_events.py
backend/app/: main.py  seeds.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  redis.py  security.py
backend/app/models/: models.py
backend/app/routers/: attachments.py  audit.py  auth.py  (+12 more)
backend/tests/: test_attachments.py  test_audit.py  test_auth.py  test_chat.py  test_coverage_gaps.py  test_dashboard.py  test_health.py  test_history.py  test_kb.py  test_llm.py  test_notifications.py  test_products.py  test_rbac.py  test_sla.py  test_storage.py  test_surveys.py  test_tickets.py  test_users.py  test_validation.py
(+157 files in other folders)
