[project]
name = "helphs-backend"
version = "1.0.0"
description = "Help Desk — Health & Safety API"
requires-python = ">=3.12"

# ── Ruff ─────────────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Black ────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py312", "py313"]

# ── mypy ─────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = false
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "redis.*", "passlib.*", "jose.*"]
ignore_missing_imports = true

# ── pytest ───────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ── Commitizen ───────────────────────────────────────────────
[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
update_changelog_on_bump = false
